force-app/main/default/objects/Payment_Method__c/fields/Card_Type__c.field-meta.xml
<CustomField>
    <fullName>Card_Type__c</fullName>
    <label>Card Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Loge Card</fullName>
            </value>
            <value>
                <fullName>Other CB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>