force-app/main/default/objects/Payment_Method__c/fields/Guest_Account__c.field-meta.xml
<CustomField>
    <fullName>Guest_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Guest Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Id</field>
            <operation>equals</operation>
            <value>0120Y000000QklY</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payment Methods</relationshipLabel>
    <relationshipName>Payment_Methods</relationshipName>
    <type>Lookup</type>
</CustomField>