force-app/main/default/objects/Payment_Method__c/fields/Inactive__c.field-meta.xml
<CustomField>
    <fullName>Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this checkbox is true, card is inactive</description>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>