force-app/main/default/objects/Payment_Method__c/fields/Loge_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Loge_Card_Number__c</fullName>
    <label>Loge Card Number</label>
    <length>16</length>
    <type>Text</type>
</CustomField>