force-app/main/default/objects/Payment_Method__c/fields/merchant_account_code__c.field-meta.xml
<CustomField>
    <fullName>merchant_account_code__c</fullName>
    <label>merchant account code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>