force-app/main/default/objects/Payment_Method__c/fields/Name_of_the_card_holder__c.field-meta.xml
<CustomField>
    <fullName>Name_of_the_card_holder__c</fullName>
    <label>Name of the card holder</label>
    <length>25</length>
    <type>Text</type>
</CustomField>