force-app/main/default/objects/Payment_Method__c/fields/recurring_detail_reference__c.field-meta.xml
<CustomField>
    <fullName>recurring_detail_reference__c</fullName>
    <label>recurring detail reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>