force-app/main/default/objects/Payment_Method__c/fields/shopper_reference__c.field-meta.xml
<CustomField>
    <fullName>shopper_reference__c</fullName>
    <label>shopper reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>