force-app/main/default/objects/Payment_Method__c/fields/Start_Validity_date__c.field-meta.xml
<CustomField>
    <fullName>Start_Validity_date__c</fullName>
    <label>Start Validity date</label>
    <type>Date</type>
</CustomField>